--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <application
         android:allowBackup="true"
@@ -10,19 +9,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.QuanLyKhachSan"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".DangKy"
-            android:exported="false" />
+            android:name=".OrderRoom" />
         <activity
-            android:name=".QuanLyHoaDon"
-            android:exported="false" />
+            android:name=".TrangChu" />
         <activity
-            android:name=".DatPhong"
-            android:exported="false" />
+            android:name=".DangKy" />
+        <activity
+            android:name=".QuanLyHoaDon" />
         <activity
             android:name=".MainActivity"
-            android:exported="true">
+            android:exported="true"> <!-- Thêm thuộc tính exported vào đây -->
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
